[tool.poetry]
name = "dit"
version = "0.1.0"
description = ""
authors = ["2lu3 <hi2lu3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
black = "^24.10.0"
natsort = "^8.4.0"
pysimplegui = "^5.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

dit = 'dit.command:dit.main'
dit-add = 'dit.command.add:to_command'
