[tool.poetry]
name = "dit"
version = "0.1.25"
description = ""
authors = ["2lu3 <hi2lu3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
loguru = "^0.7.3"
black = "^24.10.0"
natsort = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dit = 'dit.main:main'
